Working prototype with small DB for eng and spa languages

--- a/index.html
+++ b/index.html
@@ -3,11 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>Whom can I talk to?</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/js/svgInliner.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/base.css">
   </head>
-  <body style="background:red;">
-    <h1>Whom can I talk to?</h1>
-    <picture>
-      <img src="vec/worldLow.svg" alt="Mundo">
-    </picture>
+  <body>
+    <div class="container-fluid">
+      <h1>Whom can I talk to?</h1>
+      <div class="container atlas">
+        <div class="row">
+          <img viewBox="0 0 100 100" preserveAspectRatio="xMidYMid meet" class="svg mundo" src="vec/worldHigh.svg" alt="Mundo">
+        </div>
+      </div>
+      <div class="container">
+        <h2>Puedo hablar...</h2>
+        <div class="row">
+          <form class="lang-selector">
+            <div class="form-check form-check-inline">
+              <input type="checkbox" class="form-check-input language" id="spanish" value="spa">
+              <label class="form-check-label" for="spanish">Spanish</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input type="checkbox" class="form-check-input language" id="english" value="eng">
+              <label class="form-check-label" for="english">English</label>
+            </div>
+            <div class="form-check form-check-inline">
+              <input type="checkbox" class="form-check-input language" id="portuguese" value="pt">
+              <label class="form-check-label" for="portuguese">Portuguese</label>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
